Wireframe attribute doesn't work with displace. #43755

Closed
opened 2015-02-20 23:09:58 +01:00 by marc dion · 6 comments

System Information
OSX/WIN

Blender Version
So far as I can tell this has never worked. Others have mentioned it as well.

Short description of error

The Wireframe Input node for Cycles does not work with Bump or Displacement.

Exact steps for others to reproduce the error
The attached .blend file has two node chains in the one material. You can switch between either chain to see the results by clicking either of the 'Material Output' nodes. Both fail to produce the desired results.

wireNoDisplace.blend

A solution to this may be similar to https://developer.blender.org/T43651

**System Information** OSX/WIN **Blender Version** So far as I can tell this has never worked. Others have mentioned it as well. **Short description of error** The Wireframe Input node for Cycles does not work with Bump or Displacement. **Exact steps for others to reproduce the error** The attached .blend file has two node chains in the one material. You can switch between either chain to see the results by clicking either of the 'Material Output' nodes. Both fail to produce the desired results. [wireNoDisplace.blend](https://archive.blender.org/developer/F145041/wireNoDisplace.blend) A solution to this may be similar to https://developer.blender.org/T43651
Author

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin was assigned by marc dion 2015-02-20 23:09:58 +01:00
Author

Added subscriber: @MarcClintDion

Added subscriber: @MarcClintDion

This issue was referenced by a97bc1bedf

This issue was referenced by a97bc1bedf6fa63cbafbc9f004f9a6c8f472ae44

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit a97bc1bedf.

Closed by commit a97bc1bedf.

This issue was referenced by blender/cycles@99b01edbfc

This issue was referenced by blender/cycles@99b01edbfc6e0ea558152f09d5dc688fd1bab191
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43755
No description provided.